# WetpaddlersV2

./: .gitignore  .prettierrc  README.md
api/: Dockerfile  Dockerfile.base  README.md  pyproject.toml
api/api/: .env.sample  main.py  object_store.py  pmtiles.py  router.py  tippecanoe.py  wfs_to_geojson.py
app/: Dockerfile  README.md  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/ios/App/App/: Info.plist
app/src/: App.tsx  constants.ts  index.css  main.tsx
app/src/Components/ComponentA/: ComponentA.tsx
app/src/Components/ComponentB/: ComponentB.tsx
app/src/Components/ComponentC/: ComponentC.tsx
app/src/Components/ComponentD/: ComponentD.tsx
app/src/Components/ComponentE/: ComponentE.tsx
app/src/Components/CopyButton/: CopyButton.style.ts  CopyButton.tsx
app/src/Components/DatasetList/: DatasetList.tsx
app/src/Components/Header/: Header.style.ts  Header.tsx
app/src/Components/LayerPicker/: LayerPicker.style.ts  LayerPicker.tsx
app/src/Components/LayerPicker/CachedButton/: CachedButton.tsx
app/src/Components/Map/: Map.style.ts  Map.tsx  map.css
app/src/Components/WarningModal/: WarningModal.style.ts  WarningModal.tsx
app/src/Components/views/Map/: Map.style.ts  (+2 more)
app/src/assets/common-styles/: common.styles.ts
app/src/interfaces/: LayerItem.ts  Views.ts
app/src/providers/: context.ts
app/src/state/: store.ts
app/src/state/actions/: index.ts
app/src/state/reducers/: MapState.ts  index.ts
app/src/state/sagas/: MapSaga.ts
oc/: apibc.yaml  apid.yaml  uibc.yaml  uid.yaml
(+10 files in other folders)
